--- a/default.conf
+++ b/default.conf
@@ -1,10 +1,14 @@
-<VirtualHost *:80>
-    ServerAdmin webmaster@localhost
+<VirtualHost *:80>    
+    ServerAdmin webmaster@dummy-host.example.com
     DocumentRoot "/var/www/html/"
 
+    
     DirectoryIndex index.php
     ServerName localhost
-	<Directory "/var/www/html/">
-		AllowOverride all
-	</Directory>
+	
+    <Directory "/var/www/html/">
+    Options Indexes FollowSymLinks
+    AllowOverride All
+    </Directory>
+    
 </VirtualHost>
