--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,24 @@
 version: '2'
 services:
-  apache_with_php:
+  web:
     build: .
+    environment:
+      XDEBUG_CONFIG: remote_host=192.168.1.9
+      PHP_IDE_CONFIG: "serverName=localhost"
     volumes:
-      - ./src:/var/www/html/
+      - ./app:/var/www/html/
     ports:
       - "80:80"
       - "443:443"
+    links:
+     - db
+
+  db:
+    image: mysql
+    ports:
+     - "3306:3306"
+    volumes:
+     - ./dbdata:/var/lib/mysql
+    environment:
+     MYSQL_ROOT_PASSWORD: "root" 
+     MYSQL_DATABASE: "main"    
